--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="about-me">
     <nav>
-        <div class="personal__logo">Latrell Sanchez</div>
+        <div class="personal__logo">Latrell <span class="text--purple">Sanchez</span></div>
         <ul class="nav__link--list">
             <li class="nav__link">
                 <a href="#languages" class="
@@ -43,7 +43,7 @@
                     Greetings! I'm <span class="text--purple">Latrell Sanchez</span> 👋
                 </h1>
                 <p class="about-me__info--para">
-                    I am a <strong class="text--purple">growing</strong> software developer. Currently in College and I'm growing more everyday 
+                    I am a <strong class="text--purple">growing</strong> software developer. 
                 </p>
                 <div class="about-me__links">
                     <a href="https://www.linkedin.com/in/latrellsanchez/" class="about-me__link" target="_blank">
@@ -107,7 +107,7 @@
     <section id="projects">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">Here are some of my <span class="text--purple"> projects </span></h1>
+                <h1 class="section__title">Here is my <span class="text--purple"> work </span></h1>
                 <ul class="projects__list">
                     <li class="project">
                         <div class="project__wrapper">
@@ -123,11 +123,11 @@
                                     GBP.
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="https://github.com/luhtrell" target="_blank" class="project__description--link">
+                                    <a href="https://github.com/luhtrell/Currency-Convertor" target="_blank" class="project__description--link">
                                     <i class="fab fa-github"></i>
                                     </a>
                                     <a href="https://www.linkedin.com/in/latrellsanchez/" target="_blank" class="project__description--link">
-                                    <i class="fas fa-linkedin"></i>
+                                    <i class="fab fa-linkedin"></i>
                                     </a>
                                 </div>
                             </div>
