--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                          <img src="./assets/Number Guesser.png" class="project__img" alt="Number Guesser Game">
+                          <div class="project__description">
+                            <h3 class="project__description--title">Number Guessing Game</h3>
+                            <h4 class="project__description--sub-title">
+                              HTML, CSS, JavaScript
+                            </h4>
+                            <p class="project__description--para">
+                              While doing the FrontEnd Engineer Course on CodeCademy, one of the projects was this number guessing game. I was given a blank .js file and I had to complete it so the game can run correctly.
+                            </p>
+                            <div class="project__description--links">
+                              <a href="https://luhtrell.github.io/Number-Guesser-Game/" target="_blank" class="project__description--link">
+                                <i class="fab fa-github"></i>
+                              </a>
+                              <a href="https://www.linkedin.com/in/latrellsanchez/" target="_blank" class="project__description--link">
+                                <i class="fab fa-linkedin"></i>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
                 </ul>
             </div>
         </div>
