--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
                               <a href="https://www.linkedin.com/in/latrellsanchez/" target="_blank" class="project__description--link">
                                 <i class="fab fa-linkedin"></i>
                               </a>
+                    <li class="project">
+                        <div class="project__wrapper">
+                          <img src="./assets/Weather.png" class="project__img" alt="What is the Weather Today?">
+                          <div class="project__description">
+                            <h3 class="project__description--title">What is the Weather Today?</h3>
+                            <h4 class="project__description--sub-title">
+                              HTML, CSS, JavaScript
+                            </h4>
+                            <p class="project__description--para">
+                              A simple weather widgit using the OpenWeather API. 
+                            </p>
+                            <div class="project__description--links">
+                              <a href="https://luhtrell.github.io/WhatIsTheWeather/" target="_blank" class="project__description--link">
+                                <i class="fab fa-github"></i>
+                              </a>
+                              <a href="https://www.linkedin.com/in/latrellsanchez/" target="_blank" class="project__description--link">
+                                <i class="fab fa-linkedin"></i>
+                              </a>
                             </div>
                           </div>
                         </div>
@@ -191,5 +209,6 @@
             <div class="footer__copyright">Copyright © 2021 Latrell Sanchez</div>
         </div>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
