--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="mailto:sanchezlatrell30@gmail.com" class="about-me__link">
                         <i class="far fa-envelope"></i>
                     </a>
-                    <a href="./assets/Latrell_Sanchez_Resume-2.PDF" target="_blank" class="about-me__link">
+                    <a href="./assets/Sanchez_Latrell_2023.pdf" target="_blank" class="about-me__link">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -201,7 +201,7 @@
                 footer_-social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Email </a>
-                <a href="./assets/Latrell_Sanchez_Resume-2.PDF" class="
+                <a href="./assets/Sanchez_Latrell_2023.pdf" class="
                 footer_-social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Resume </a>
