--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     Python
                                 </h4>
                                 <p class="project__description--para">
-                                    As a final porject for class, I was tasked to create a project,
+                                    As a final project for class, I was tasked to create a project,
                                     I decided to make a currency convertor from USD to EUR, CAD, JPY and
                                     GBP.
                                 </p>
@@ -201,7 +201,7 @@
                 footer_-social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Email </a>
-                <a href="./assets/Latrell_Sanchez_Resume_Final.pdf" class="
+                <a href="./assets/Latrell_Sanchez_Resume.pdf" class="
                 footer_-social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Resume </a>
